fix contraste couleurs

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -4,6 +4,7 @@
 }
 
 div.css-1dimb5e-singleValue {
-  color: $input-color;
+  //color: $input-color;
   font-size: 15px;
+  color: #1e1e1e;
 }
