--- a/src/pages/CreateEmployee/CreateEmployee.scss
+++ b/src/pages/CreateEmployee/CreateEmployee.scss
@@ -25,12 +25,14 @@ h2 {
     input {
       width: 15rem;
       padding: 0.3rem;
-      color: $input-color;
+      //color: $input-color;
+      color: #575757;
     }
 
     label {
       margin: 1rem 0 0.5rem;
-      color: #787878;
+      //color: #787878;
+      color: #525252;
       font-size: 15px;
     }
 
